# OpenConstructionERP

./: .gitignore  .pre-commit-config.yaml  ACKNOWLEDGMENTS.md  AGENTS.md  CHANGELOG.md  CONTRIBUTORS.md  MODULES.md  README.md  docker-compose.quickstart.yml
.github/workflows/: ci-full.yml  ci.yml  repo-hygiene.yml
backend/: pyproject.toml
backend/app/: cli.py  cli_static.py  dependencies.py  main.py
backend/locales/: ar.json  bg.json  cs.json  da.json  de.json  en.json  es.json  fi.json  fr.json  hi.json  hr.json  id.json  it.json  ja.json  ko.json  nl.json  no.json  pl.json  pt.json  ro.json  ru.json  sv.json  th.json  tr.json  vi.json  zh.json
deploy/docker/: Dockerfile.unified  README.md  entrypoint.sh  nginx.conf
desktop/src-tauri/: tauri.conf.json
docs/: INSTALL_LINUX.md  cost-database-import.md
docs/module-development/: quickstart.md
frontend/: index.html  package-lock.json  package.json  qa-shot-cost-data-ai.mjs  vite.config.ts
frontend/public/: splash.html
frontend/src/: main.tsx
marketing-site/: cookie-policy.html  docs.html  download.html  imprint.html  index.html  industries.html  news.html  partners.html  privacy-policy.html  services.html  standards.html  terms-of-service.html  terms.html
marketing-site/locales/: ar.json  bg.json  cs.json  da.json  de.json  en.json  es.json  fi.json  fr.json  it.json  ja.json  ko.json  nl.json  no.json  pl.json  pt.json  ru.json  sv.json  tr.json  zh.json
marketing-site/news/: open-erp-own-your-stack.html  v3-0-0.html  v3-11-0.html  v3-6-0.html  v4-0-0.html  v5-2-2.html  v5-2-3.html  v5-2-6.html  v5-2-7.html  (+8 more)
packs/retail-grocery-dach/: README.md  pyproject.toml
packs/retail-grocery-dach/src/openconstructionerp_retail_grocery_dach/: __init__.py  manifest.py
scripts/: brand_token_allowlist.txt  check_commit_trailers.py  check_no_brand_tokens.py
signatures/: cla.json
(+712 files in other folders)
